examples/qualification/executable_module_entry/negative_multi_hop_cycle_bare_import/src/a.sm
Import "b.sm"

fn score_a() -> i32 {
    return score_b();
}
